grammar/lib/msp430Parser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import msp430Listener from './msp430Listener.js';
import msp430Visitor from './msp430Visitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class msp430Parser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "':'", "','", "'*'", "'+'", "'-'", "'('", 
                            "')'", "'#'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, "ASSEMBLER_INSTRUCTION", "ADC", "AND", 
                             "ASL", "BCC", "BCS", "BEQ", "BIT", "BMI", "BNE", 
                             "BPL", "BRA", "BRK", "BVC", "BVS", "CLC", "CLD", 
                             "CLI", "CLV", "CMP", "CPX", "CPY", "DEC", "DEX", 
                             "DEY", "EOR", "INC", "INX", "INY", "JMP", "JSR", 
                             "LDA", "LDY", "LDX", "LSR", "NOP", "ORA", "PHA", 
                             "PHX", "PHY", "PHP", "PLA", "PLP", "PLY", "ROL", 
                             "ROR", "RTI", "RTS", "SBC", "SEC", "SED", "SEI", 
                             "STA", "STX", "STY", "STZ", "TAX", "TAY", "TSX", 
                             "TXA", "TXS", "TYA", "NAME", "NUMBER", "COMMENT", 
                             "STRING", "EOL", "WS" ];
    static ruleNames = [ "prog", "line", "instruction", "assemblerinstruction", 
                         "assembleropcode", "lbl", "argumentlist", "label", 
                         "argument", "prefix_", "string_", "name", "number", 
                         "opcode" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = msp430Parser.ruleNames;
        this.literalNames = msp430Parser.literalNames;
        this.symbolicNames = msp430Parser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, msp430Parser.RULE_prog);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 31;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 4294967112) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & 3583) !== 0)) {
	            this.state = 28;
	            this.line();
	            this.state = 33;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 34;
	        this.match(msp430Parser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, msp430Parser.RULE_line);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 39;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        if(la_===1) {
	            this.state = 36;
	            this.instruction();

	        } else if(la_===2) {
	            this.state = 37;
	            this.assemblerinstruction();

	        } else if(la_===3) {
	            this.state = 38;
	            this.lbl();

	        }
	        this.state = 41;
	        this.match(msp430Parser.EOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, msp430Parser.RULE_instruction);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===71) {
	            this.state = 43;
	            this.label();
	        }

	        this.state = 46;
	        this.opcode();
	        this.state = 48;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 328) !== 0) || ((((_la - 71)) & ~0x1f) == 0 && ((1 << (_la - 71)) & 11) !== 0)) {
	            this.state = 47;
	            this.argumentlist();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assemblerinstruction() {
	    let localctx = new AssemblerinstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, msp430Parser.RULE_assemblerinstruction);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 328) !== 0) || ((((_la - 71)) & ~0x1f) == 0 && ((1 << (_la - 71)) & 11) !== 0)) {
	            this.state = 50;
	            this.argument();
	        }

	        this.state = 53;
	        this.assembleropcode();
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 328) !== 0) || ((((_la - 71)) & ~0x1f) == 0 && ((1 << (_la - 71)) & 11) !== 0)) {
	            this.state = 54;
	            this.argumentlist();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assembleropcode() {
	    let localctx = new AssembleropcodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, msp430Parser.RULE_assembleropcode);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this.match(msp430Parser.ASSEMBLER_INSTRUCTION);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lbl() {
	    let localctx = new LblContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, msp430Parser.RULE_lbl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this.label();
	        this.state = 60;
	        this.match(msp430Parser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentlist() {
	    let localctx = new ArgumentlistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, msp430Parser.RULE_argumentlist);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        this.argument();
	        this.state = 65;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 63;
	            this.match(msp430Parser.T__1);
	            this.state = 64;
	            this.argumentlist();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	label() {
	    let localctx = new LabelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, msp430Parser.RULE_label);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.name();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argument() {
	    let localctx = new ArgumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, msp430Parser.RULE_argument);
	    var _la = 0; // Token type
	    try {
	        this.state = 86;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	        case 8:
	        case 71:
	        case 72:
	        case 74:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 70;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===8) {
	                this.state = 69;
	                this.prefix_();
	            }

	            this.state = 76;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 72:
	                this.state = 72;
	                this.number();
	                break;
	            case 71:
	                this.state = 73;
	                this.name();
	                break;
	            case 74:
	                this.state = 74;
	                this.string_();
	                break;
	            case 3:
	                this.state = 75;
	                this.match(msp430Parser.T__2);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 80;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4 || _la===5) {
	                this.state = 78;
	                _la = this._input.LA(1);
	                if(!(_la===4 || _la===5)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 79;
	                this.number();
	            }

	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 82;
	            this.match(msp430Parser.T__5);
	            this.state = 83;
	            this.argument();
	            this.state = 84;
	            this.match(msp430Parser.T__6);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prefix_() {
	    let localctx = new Prefix_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, msp430Parser.RULE_prefix_);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(msp430Parser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_() {
	    let localctx = new String_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, msp430Parser.RULE_string_);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(msp430Parser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	name() {
	    let localctx = new NameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, msp430Parser.RULE_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(msp430Parser.NAME);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, msp430Parser.RULE_number);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(msp430Parser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	opcode() {
	    let localctx = new OpcodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, msp430Parser.RULE_opcode);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        _la = this._input.LA(1);
	        if(!(((((_la - 10)) & ~0x1f) == 0 && ((1 << (_la - 10)) & 4294967295) !== 0) || ((((_la - 42)) & ~0x1f) == 0 && ((1 << (_la - 42)) & 536870911) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

msp430Parser.EOF = antlr4.Token.EOF;
msp430Parser.T__0 = 1;
msp430Parser.T__1 = 2;
msp430Parser.T__2 = 3;
msp430Parser.T__3 = 4;
msp430Parser.T__4 = 5;
msp430Parser.T__5 = 6;
msp430Parser.T__6 = 7;
msp430Parser.T__7 = 8;
msp430Parser.ASSEMBLER_INSTRUCTION = 9;
msp430Parser.ADC = 10;
msp430Parser.AND = 11;
msp430Parser.ASL = 12;
msp430Parser.BCC = 13;
msp430Parser.BCS = 14;
msp430Parser.BEQ = 15;
msp430Parser.BIT = 16;
msp430Parser.BMI = 17;
msp430Parser.BNE = 18;
msp430Parser.BPL = 19;
msp430Parser.BRA = 20;
msp430Parser.BRK = 21;
msp430Parser.BVC = 22;
msp430Parser.BVS = 23;
msp430Parser.CLC = 24;
msp430Parser.CLD = 25;
msp430Parser.CLI = 26;
msp430Parser.CLV = 27;
msp430Parser.CMP = 28;
msp430Parser.CPX = 29;
msp430Parser.CPY = 30;
msp430Parser.DEC = 31;
msp430Parser.DEX = 32;
msp430Parser.DEY = 33;
msp430Parser.EOR = 34;
msp430Parser.INC = 35;
msp430Parser.INX = 36;
msp430Parser.INY = 37;
msp430Parser.JMP = 38;
msp430Parser.JSR = 39;
msp430Parser.LDA = 40;
msp430Parser.LDY = 41;
msp430Parser.LDX = 42;
msp430Parser.LSR = 43;
msp430Parser.NOP = 44;
msp430Parser.ORA = 45;
msp430Parser.PHA = 46;
msp430Parser.PHX = 47;
msp430Parser.PHY = 48;
msp430Parser.PHP = 49;
msp430Parser.PLA = 50;
msp430Parser.PLP = 51;
msp430Parser.PLY = 52;
msp430Parser.ROL = 53;
msp430Parser.ROR = 54;
msp430Parser.RTI = 55;
msp430Parser.RTS = 56;
msp430Parser.SBC = 57;
msp430Parser.SEC = 58;
msp430Parser.SED = 59;
msp430Parser.SEI = 60;
msp430Parser.STA = 61;
msp430Parser.STX = 62;
msp430Parser.STY = 63;
msp430Parser.STZ = 64;
msp430Parser.TAX = 65;
msp430Parser.TAY = 66;
msp430Parser.TSX = 67;
msp430Parser.TXA = 68;
msp430Parser.TXS = 69;
msp430Parser.TYA = 70;
msp430Parser.NAME = 71;
msp430Parser.NUMBER = 72;
msp430Parser.COMMENT = 73;
msp430Parser.STRING = 74;
msp430Parser.EOL = 75;
msp430Parser.WS = 76;

msp430Parser.RULE_prog = 0;
msp430Parser.RULE_line = 1;
msp430Parser.RULE_instruction = 2;
msp430Parser.RULE_assemblerinstruction = 3;
msp430Parser.RULE_assembleropcode = 4;
msp430Parser.RULE_lbl = 5;
msp430Parser.RULE_argumentlist = 6;
msp430Parser.RULE_label = 7;
msp430Parser.RULE_argument = 8;
msp430Parser.RULE_prefix_ = 9;
msp430Parser.RULE_string_ = 10;
msp430Parser.RULE_name = 11;
msp430Parser.RULE_number = 12;
msp430Parser.RULE_opcode = 13;

class ProgContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_prog;
    }

	EOF() {
	    return this.getToken(msp430Parser.EOF, 0);
	};

	line = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LineContext);
	    } else {
	        return this.getTypedRuleContext(LineContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterProg(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitProg(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitProg(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LineContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_line;
    }

	EOL() {
	    return this.getToken(msp430Parser.EOL, 0);
	};

	instruction() {
	    return this.getTypedRuleContext(InstructionContext,0);
	};

	assemblerinstruction() {
	    return this.getTypedRuleContext(AssemblerinstructionContext,0);
	};

	lbl() {
	    return this.getTypedRuleContext(LblContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterLine(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitLine(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitLine(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InstructionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_instruction;
    }

	opcode() {
	    return this.getTypedRuleContext(OpcodeContext,0);
	};

	label() {
	    return this.getTypedRuleContext(LabelContext,0);
	};

	argumentlist() {
	    return this.getTypedRuleContext(ArgumentlistContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterInstruction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitInstruction(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitInstruction(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AssemblerinstructionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_assemblerinstruction;
    }

	assembleropcode() {
	    return this.getTypedRuleContext(AssembleropcodeContext,0);
	};

	argument() {
	    return this.getTypedRuleContext(ArgumentContext,0);
	};

	argumentlist() {
	    return this.getTypedRuleContext(ArgumentlistContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterAssemblerinstruction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitAssemblerinstruction(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitAssemblerinstruction(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AssembleropcodeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_assembleropcode;
    }

	ASSEMBLER_INSTRUCTION() {
	    return this.getToken(msp430Parser.ASSEMBLER_INSTRUCTION, 0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterAssembleropcode(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitAssembleropcode(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitAssembleropcode(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LblContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_lbl;
    }

	label() {
	    return this.getTypedRuleContext(LabelContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterLbl(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitLbl(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitLbl(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ArgumentlistContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_argumentlist;
    }

	argument() {
	    return this.getTypedRuleContext(ArgumentContext,0);
	};

	argumentlist() {
	    return this.getTypedRuleContext(ArgumentlistContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterArgumentlist(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitArgumentlist(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitArgumentlist(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LabelContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_label;
    }

	name() {
	    return this.getTypedRuleContext(NameContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterLabel(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitLabel(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitLabel(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ArgumentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_argument;
    }

	number = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NumberContext);
	    } else {
	        return this.getTypedRuleContext(NumberContext,i);
	    }
	};

	name() {
	    return this.getTypedRuleContext(NameContext,0);
	};

	string_() {
	    return this.getTypedRuleContext(String_Context,0);
	};

	prefix_() {
	    return this.getTypedRuleContext(Prefix_Context,0);
	};

	argument() {
	    return this.getTypedRuleContext(ArgumentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterArgument(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitArgument(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof msp430Visitor ) {
	        return visitor.visitArgument(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Prefix_Context extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = msp430Parser.RULE_prefix_;
    }


	enterRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.enterPrefix_(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof msp430Listener ) {
	        listener.exitPrefix_(this);
		}
	}
